ALSA: hda/realtek: Add quirk for Huawei WRT-WX9 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14383,6 +14383,7 @@
 	patches.suse/gpio-mpc8xxx-Fix-support-for-IRQ_TYPE_LEVEL_LOW-flow.patch
 	patches.suse/ALSA-hda-Fix-hang-at-HD-audio-codec-unbinding-due-to.patch
 	patches.suse/ALSA-hda-add-Intel-5-Series-3400-PCI-DID.patch
+	patches.suse/ALSA-hda-realtek-Add-quirk-for-Huawei-WRT-WX9.patch
 	patches.suse/ALSA-hda-realtek-Re-arrange-quirk-table-entries.patch
 	patches.suse/ALSA-core-Fix-double-free-at-snd_card_new.patch
 	patches.suse/Revert-ALSA-usb-audio-Split-endpoint-setups-for-hw_p.patch
