--- a/series.conf
+++ b/series.conf
@@ -14385,6 +14385,7 @@
 	patches.suse/ALSA-hda-add-Intel-5-Series-3400-PCI-DID.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Huawei-WRT-WX9.patch
 	patches.suse/ALSA-hda-realtek-Enable-4-speaker-output-Dell-Precis.patch
+	patches.suse/ALSA-hda-realtek-Enable-4-speaker-output-Dell-Precis-1885ff13d4c4.patch
 	patches.suse/ALSA-hda-realtek-Re-arrange-quirk-table-entries.patch
 	patches.suse/ALSA-core-Fix-double-free-at-snd_card_new.patch
 	patches.suse/Revert-ALSA-usb-audio-Split-endpoint-setups-for-hw_p.patch
