ALSA: hda/realtek: Add pincfg for ASUS G533Z HP jack (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14388,6 +14388,7 @@
 	patches.suse/ALSA-hda-realtek-Enable-4-speaker-output-Dell-Precis-1885ff13d4c4.patch
 	patches.suse/ALSA-hda-realtek-Re-arrange-quirk-table-entries.patch
 	patches.suse/ALSA-hda-realtek-Add-pincfg-for-ASUS-G513-HP-jack.patch
+	patches.suse/ALSA-hda-realtek-Add-pincfg-for-ASUS-G533Z-HP-jack.patch
 	patches.suse/ALSA-core-Fix-double-free-at-snd_card_new.patch
 	patches.suse/Revert-ALSA-usb-audio-Split-endpoint-setups-for-hw_p.patch
 	patches.suse/dmaengine-ti-k3-udma-private-Fix-refcount-leak-bug-i.patch
