--- a/series.conf
+++ b/series.conf
@@ -14387,6 +14387,7 @@
 	patches.suse/ALSA-hda-add-Intel-5-Series-3400-PCI-DID.patch
 	patches.suse/ALSA-hda-tegra-set-depop-delay-for-tegra.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Huawei-WRT-WX9.patch
+	patches.suse/ALSA-hda-Fix-Nvidia-dp-infoframe.patch
 	patches.suse/ALSA-hda-realtek-Enable-4-speaker-output-Dell-Precis.patch
 	patches.suse/ALSA-hda-realtek-Enable-4-speaker-output-Dell-Precis-1885ff13d4c4.patch
 	patches.suse/ALSA-hda-realtek-Re-arrange-quirk-table-entries.patch
