ALSA: hda/tegra: set depop delay for tegra (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14385,6 +14385,7 @@
 	patches.suse/gpio-mpc8xxx-Fix-support-for-IRQ_TYPE_LEVEL_LOW-flow.patch
 	patches.suse/ALSA-hda-Fix-hang-at-HD-audio-codec-unbinding-due-to.patch
 	patches.suse/ALSA-hda-add-Intel-5-Series-3400-PCI-DID.patch
+	patches.suse/ALSA-hda-tegra-set-depop-delay-for-tegra.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Huawei-WRT-WX9.patch
 	patches.suse/ALSA-hda-realtek-Enable-4-speaker-output-Dell-Precis.patch
 	patches.suse/ALSA-hda-realtek-Enable-4-speaker-output-Dell-Precis-1885ff13d4c4.patch
