--- a/series.conf
+++ b/series.conf
@@ -10538,6 +10538,7 @@
 	patches.suse/ALSA-hda-Fix-driver-index-handling-at-re-binding.patch
 	patches.suse/ALSA-hda-Add-PCI-and-HDMI-IDs-for-Intel-Raptor-Lake.patch
 	patches.suse/ALSA-hda-tegra-Add-Tegra234-hda-driver-support.patch
+	patches.suse/ALSA-hda-tegra-Update-scratch-reg.-communication.patch
 	patches.suse/ALSA-spi-Add-check-for-clk_enable.patch
 	patches.suse/ALSA-hda-Add-AlderLake-PS-variant-PCI-ID.patch
 	patches.suse/ALSA-hda-realtek-fix-right-sounds-and-mute-micmute-L.patch
