--- a/series.conf
+++ b/series.conf
@@ -57020,6 +57020,7 @@
 	patches.suse/ALSA-usb-audio-Fix-an-out-of-bounds-bug-in-__snd_usb.patch
 	patches.suse/ALSA-emu10k1-Fix-out-of-bounds-access-in-snd_emu10k1.patch
 	patches.suse/ALSA-hda-realtek-Re-arrange-quirk-table-entries.patch
+	patches.suse/Revert-ALSA-usb-audio-Split-endpoint-setups-for-hw_p.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
