--- a/series.conf
+++ b/series.conf
@@ -56973,6 +56973,7 @@
 	patches.suse/HID-steam-Prevent-NULL-pointer-dereference-in-steam_.patch
 	patches.suse/mm-rmap-Fix-anon_vma-degree-ambiguity-leading-to-double-reuse.patch
 	patches.suse/ALSA-seq-oss-Fix-data-race-for-max_midi_devs-access.patch
+	patches.suse/ALSA-seq-Fix-data-race-at-module-auto-loading.patch
 	patches.suse/wifi-mac80211-Don-t-finalize-CSA-in-IBSS-mode-if-sta.patch
 	patches.suse/wifi-cfg80211-debugfs-fix-return-type-in-ht40allow_m.patch
 	patches.suse/Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
