ALSA: usb-audio: Fix an out-of-bounds bug in __snd_usb_parse_audio_interface() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57017,6 +57017,7 @@
 	patches.suse/ALSA-usb-audio-Register-card-again-for-iface-over-de.patch
 	patches.suse/ALSA-usb-audio-Split-endpoint-setups-for-hw_params-a.patch
 	patches.suse/ALSA-aloop-Fix-random-zeros-in-capture-data-when-usi.patch
+	patches.suse/ALSA-usb-audio-Fix-an-out-of-bounds-bug-in-__snd_usb.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
