--- a/series.conf
+++ b/series.conf
@@ -56969,6 +56969,7 @@
 	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
 	patches.suse/netfilter-nf_tables-disallow-binding-to-already-boun.patch
 	patches.suse/drm-gem-Fix-GEM-handle-release-errors.patch
+	patches.suse/drm-amdgpu-Check-num_gfx_rings-for-gfx-v9_0-rb-setup.patch
 	patches.suse/s390-mm-do-not-trigger-write-fault-when-vma-does-not-allow-VM_WRITE
 	patches.suse/ACPI-processor-Remove-freq-Qos-request-for-all-CPUs.patch
 	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
