of/device: Fix up of_dma_configure_id() stub (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57044,6 +57044,7 @@
 	patches.suse/ALSA-usb-audio-Fix-an-out-of-bounds-bug-in-__snd_usb.patch
 	patches.suse/ALSA-emu10k1-Fix-out-of-bounds-access-in-snd_emu10k1.patch
 	patches.suse/of-fdt-fix-off-by-one-error-in-unflatten_dt_nodes.patch
+	patches.suse/of-device-Fix-up-of_dma_configure_id-stub.patch
 	patches.suse/ALSA-hda-realtek-Re-arrange-quirk-table-entries.patch
 	patches.suse/Revert-ALSA-usb-audio-Split-endpoint-setups-for-hw_p.patch
 
