--- a/series.conf
+++ b/series.conf
@@ -57016,6 +57016,7 @@
 	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-msm8996_dsi.patch
 	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-SDM660.patch
 	patches.suse/drm-msm-rd-Fix-FIFO-full-deadlock.patch
+	patches.suse/drm-i915-glk-ECS-Liva-Q2-needs-GLK-HDMI-port-timing-.patch
 	patches.suse/mm-pagewalk-Fix-race-between-unmap-and-page-walker.patch
 	patches.suse/hwmon-gpio-fan-Fix-array-out-of-bounds-access.patch
 	patches.suse/clk-core-Honor-CLK_OPS_PARENT_ENABLE-for-clk-gate-op.patch
