--- a/series.conf
+++ b/series.conf
@@ -56973,6 +56973,7 @@
 	patches.suse/drm-radeon-add-a-force-flush-to-delay-work-when-rade.patch
 	patches.suse/drm-amdgpu-mmVM_L2_CNTL3-register-not-initialized-co.patch
 	patches.suse/fbdev-fb_pm2fb-Avoid-potential-divide-by-zero-error.patch
+	patches.suse/fbdev-chipsfb-Add-missing-pci_disable_device-in-chip.patch
 	patches.suse/s390-mm-do-not-trigger-write-fault-when-vma-does-not-allow-VM_WRITE
 	patches.suse/ACPI-processor-Remove-freq-Qos-request-for-all-CPUs.patch
 	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
