--- a/series.conf
+++ b/series.conf
@@ -56992,6 +56992,7 @@
 	patches.suse/platform-x86-acer-wmi-Acer-Aspire-One-AOD270-Packard.patch
 	patches.suse/usb-storage-Add-ignore-residue-quirk-for-NXP-PN7462A.patch
 	patches.suse/usb-typec-altmodes-displayport-correct-pin-assignmen.patch
+	patches.suse/USB-cdc-acm-Add-Icom-PMR-F3400-support-0c26-0020.patch
 	patches.suse/thunderbolt-Use-the-actual-buffer-in-tb_async_error.patch
 	patches.suse/usb-gadget-udc-xilinx-replace-memcpy-with-memcpy_toi.patch
 	patches.suse/usb-dwc2-fix-wrong-order-of-phy_power_on-and-phy_ini.patch
