--- a/series.conf
+++ b/series.conf
@@ -57047,6 +57047,7 @@
 	patches.suse/of-device-Fix-up-of_dma_configure_id-stub.patch
 	patches.suse/drm-meson-Correct-OSD1-global-alpha-value.patch
 	patches.suse/drm-meson-Fix-OSD1-RGB-to-YCbCr-coefficient.patch
+	patches.suse/pinctrl-rockchip-Enhance-support-for-IRQ_TYPE_EDGE_B.patch
 	patches.suse/ALSA-hda-realtek-Re-arrange-quirk-table-entries.patch
 	patches.suse/Revert-ALSA-usb-audio-Split-endpoint-setups-for-hw_p.patch
 
