--- a/series.conf
+++ b/series.conf
@@ -56998,6 +56998,7 @@
 	patches.suse/usb-dwc2-fix-wrong-order-of-phy_power_on-and-phy_ini.patch
 	patches.suse/usb-gadget-mass_storage-Fix-cdrom-data-transfers-on-.patch
 	patches.suse/USB-serial-option-add-support-for-OPPO-R11-diag-port.patch
+	patches.suse/USB-serial-option-add-Quectel-EM060K-modem.patch
 	patches.suse/USB-serial-ch341-fix-lost-character-on-LCR-updates.patch
 	patches.suse/USB-serial-ch341-fix-disabled-rx-timer-on-older-devi.patch
 	patches.suse/Revert-usb-gadget-udc-xilinx-replace-memcpy-with-mem.patch
