--- a/series.conf
+++ b/series.conf
@@ -56987,6 +56987,7 @@
 	patches.suse/wifi-cfg80211-debugfs-fix-return-type-in-ht40allow_m.patch
 	patches.suse/Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
 	patches.suse/ieee802154-adf7242-defer-destroy_workqueue-call.patch
+	patches.suse/ieee802154-cc2520-add-rc-code-in-cc2520_tx.patch
 	patches.suse/platform-x86-pmc_atom-Fix-SLP_TYPx-bitfield-mask.patch
 	patches.suse/usb-typec-altmodes-displayport-correct-pin-assignmen.patch
 	patches.suse/thunderbolt-Use-the-actual-buffer-in-tb_async_error.patch
