--- a/series.conf
+++ b/series.conf
@@ -56990,6 +56990,7 @@
 	patches.suse/ieee802154-cc2520-add-rc-code-in-cc2520_tx.patch
 	patches.suse/platform-x86-pmc_atom-Fix-SLP_TYPx-bitfield-mask.patch
 	patches.suse/platform-x86-acer-wmi-Acer-Aspire-One-AOD270-Packard.patch
+	patches.suse/usb-storage-Add-ignore-residue-quirk-for-NXP-PN7462A.patch
 	patches.suse/usb-typec-altmodes-displayport-correct-pin-assignmen.patch
 	patches.suse/thunderbolt-Use-the-actual-buffer-in-tb_async_error.patch
 	patches.suse/usb-gadget-udc-xilinx-replace-memcpy-with-memcpy_toi.patch
