vt: selection, introduce vc_is_sel (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -24000,6 +24000,7 @@
 	patches.suse/mmc-sdhci-introduce-sdhci_set_power_and_bus_voltage.patch
 	patches.suse/mmc-sdhci-iproc-add-custom-set_power-callback-for-bcm2711.patch
 	patches.suse/serial-8250_tegra-Create-Tegra-specific-8250-driver.patch
+	patches.suse/vt-selection-introduce-vc_is_sel.patch
 	patches.suse/tty-imx-serial-implement-support-for-reversing-tx-and-rx-polarity.patch
 	patches.suse/serial-8250_lpss-Add-setup-for-Elkhart-Lake-ports.patch
 	patches.suse/serial-8250-don-t-touch-rts-modem-control-while-in-rs485-mode.patch
