hid: intel-ish-hid: ishtp: Fix ishtp client sending disordered message (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56979,6 +56979,7 @@
 	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
 	patches.suse/HID-steam-Prevent-NULL-pointer-dereference-in-steam_.patch
 	patches.suse/HID-ishtp-hid-clientHID-ishtp-hid-client-Fix-comment.patch
+	patches.suse/hid-intel-ish-hid-ishtp-Fix-ishtp-client-sending-dis.patch
 	patches.suse/mm-rmap-Fix-anon_vma-degree-ambiguity-leading-to-double-reuse.patch
 	patches.suse/ALSA-seq-oss-Fix-data-race-for-max_midi_devs-access.patch
 	patches.suse/ALSA-seq-Fix-data-race-at-module-auto-loading.patch
