drm/gem: Fix GEM handle release errors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56968,6 +56968,7 @@
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
 	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
 	patches.suse/netfilter-nf_tables-disallow-binding-to-already-boun.patch
+	patches.suse/drm-gem-Fix-GEM-handle-release-errors.patch
 	patches.suse/s390-mm-do-not-trigger-write-fault-when-vma-does-not-allow-VM_WRITE
 	patches.suse/ACPI-processor-Remove-freq-Qos-request-for-all-CPUs.patch
 	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
