soc: brcmstb: pm-arm: Fix refcount leak and __iomem leak bugs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57031,6 +57031,7 @@
 	patches.suse/Input-iforce-wake-up-after-clearing-IFORCE_XMIT_RUNN.patch
 	patches.suse/Input-iforce-add-support-for-Boeder-Force-Feedback-W.patch
 	patches.suse/gpio-pca953x-Add-mutex_lock-for-regcache-sync-in-PM.patch
+	patches.suse/soc-brcmstb-pm-arm-Fix-refcount-leak-and-__iomem-lea.patch
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
 	patches.suse/wifi-iwlegacy-4965-corrected-fix-for-potential-off-b.patch
 	patches.suse/regulator-core-Clean-up-on-enable-failure.patch
