--- a/series.conf
+++ b/series.conf
@@ -57024,6 +57024,7 @@
 	patches.suse/clk-bcm-rpi-Fix-error-handling-of-raspberrypi_fw_get.patch
 	patches.suse/Revert-clk-core-Honor-CLK_OPS_PARENT_ENABLE-for-clk-.patch
 	patches.suse/staging-rtl8712-fix-use-after-free-bugs.patch
+	patches.suse/vt-Clear-selection-before-changing-the-font.patch
 	patches.suse/serial-fsl_lpuart-RS485-RTS-polariy-is-inverse.patch
 	patches.suse/tty-serial-lpuart-disable-flow-control-while-waiting.patch
 	patches.suse/Input-rk805-pwrkey-fix-module-autoloading.patch
