--- a/series.conf
+++ b/series.conf
@@ -57000,6 +57000,7 @@
 	patches.suse/USB-serial-option-add-support-for-OPPO-R11-diag-port.patch
 	patches.suse/USB-serial-option-add-Quectel-EM060K-modem.patch
 	patches.suse/USB-serial-ftdi_sio-add-Omron-CS1W-CIF31-device-id.patch
+	patches.suse/USB-serial-option-add-support-for-Cinterion-MV32-WA--8ffe20d08f2c.patch
 	patches.suse/USB-serial-ch341-fix-lost-character-on-LCR-updates.patch
 	patches.suse/USB-serial-ch341-fix-disabled-rx-timer-on-older-devi.patch
 	patches.suse/Revert-usb-gadget-udc-xilinx-replace-memcpy-with-mem.patch
