ethernet: ocelot: use eth_hw_addr_gen() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5587,6 +5587,7 @@
 	patches.suse/ethernet-smc91x-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-smsc-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-add-a-helper-for-assigning-port-addresses.patch
+	patches.suse/ethernet-ocelot-use-eth_hw_addr_gen.patch
 	patches.suse/ethernet-prestera-use-eth_hw_addr_gen.patch
 	patches.suse/ethernet-mlxsw-use-eth_hw_addr_gen.patch
 	patches.suse/e1000e-Remove-redundant-statement.patch
