--- a/series.conf
+++ b/series.conf
@@ -9632,6 +9632,7 @@
 	patches.suse/can-tcan4x5x-regmap-fix-max-register-value.patch
 	patches.suse/yam-fix-a-memory-leak-in-yam_siocdevprivate.patch
 	patches.suse/net-cpsw-Properly-initialise-struct-page_pool_params.patch
+	patches.suse/net-fec_mpc52xx-don-t-discard-const-from-netdev-dev_.patch
 	patches.suse/net-hns3-handle-empty-unknown-interrupt-for-VF.patch
 	patches.suse/amd-declance-use-eth_hw_addr_set.patch
 	patches.suse/sch_htb-Fail-on-unsupported-parameters-when-offload-.patch
