ethernet: enetc: use eth_hw_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5532,6 +5532,7 @@
 	patches.suse/ethernet-bcmgenet-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-enic-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-ec_bhf-use-eth_hw_addr_set.patch
+	patches.suse/ethernet-enetc-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-ixgb-use-eth_hw_addr_set.patch
 	patches.suse/net-stream-don-t-purge-sk_error_queue-in-sk_stream_k.patch
 	patches.suse/net-smc-save-stack-space-and-allocate-smc_init_info
