--- a/series.conf
+++ b/series.conf
@@ -5589,6 +5589,7 @@
 	patches.suse/ethernet-add-a-helper-for-assigning-port-addresses.patch
 	patches.suse/ethernet-ocelot-use-eth_hw_addr_gen.patch
 	patches.suse/ethernet-prestera-use-eth_hw_addr_gen.patch
+	patches.suse/ethernet-fec-use-eth_hw_addr_gen.patch
 	patches.suse/ethernet-mlxsw-use-eth_hw_addr_gen.patch
 	patches.suse/e1000e-Remove-redundant-statement.patch
 	patches.suse/net-sched-Allow-statistics-reads-from-softirq.patch
