--- a/blacklist.conf
+++ b/blacklist.conf
@@ -404,3 +404,4 @@ f5840e0da6397586f3dbfaf15227588d1218dfe3 # already applied
 ad2c302bc6049c56c85cc2b64a0b4bd8e7ffdc56 # kernel-doc warning
 e9b6013a7ce31535b04b02ba99babefe8a8599fa # documentation
 ea768b2ffec6cc9c3e17c37ef75d0539b8f89ff5 # already applied
+fb7e76ea3f3b6238dda2f19a4212052d2caf00aa # there is no mlx5e_tc_act_parse_state
