--- a/series.conf
+++ b/series.conf
@@ -7298,6 +7298,7 @@
 	patches.suse/ice-avoid-bpf_prog-refcount-underflow.patch
 	patches.suse/net-chelsio-cxgb4vf-Fix-an-error-code-in-cxgb4vf_pci.patch
 	patches.suse/net-usb-Correct-PHY-handling-of-smsc95xx.patch
+	patches.suse/net-ipa-kill-ipa_cmd_pipeline_clear.patch
 	patches.suse/net-marvell-mvpp2-increase-MTU-limit-when-XDP-enable.patch
 	patches.suse/lan743x-fix-deadlock-in-lan743x_phy_link_status_chan.patch
 	patches.suse/net-phylink-Force-link-down-and-retrigger-resolve-on.patch
