net: dsa: introduce helpers for iterating through ports using dp (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -5482,6 +5482,7 @@
 	patches.suse/ice-Add-infrastructure-for-mqprio-support-via-ndo_se.patch
 	patches.suse/ice-enable-ndo_setup_tc-support-for-mqprio_qdisc.patch
 	patches.suse/ice-Add-tc-flower-filter-support-for-channel.patch
+	patches.suse/net-dsa-introduce-helpers-for-iterating-through-port.patch
 	patches.suse/net-stats-Read-the-statistics-in-___gnet_stats_copy_.patch
 	patches.suse/ice-Nuild-fix.patch
 	patches.suse/mlx5-fix-build-after-merge.patch
