Revert "ice: Hide bus-info in ethtool for PRs in switchdev mode" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12322,6 +12322,7 @@
 	patches.suse/ath11k-disable-spectral-scan-during-spectral-deinit.patch
 	patches.suse/ath10k-skip-ath10k_halt-during-suspend-for-driver-st.patch
 	patches.suse/carl9170-tx-fix-an-incorrect-use-of-list-iterator.patch
+	patches.suse/Revert-ice-Hide-bus-info-in-ethtool-for-PRs-in-switc.patch
 	patches.suse/usbnet-Run-unregister_netdev-before-unbind-again.patch
 	patches.suse/usbnet-smsc95xx-Don-t-clear-read-only-PHY-interrupt.patch
 	patches.suse/usbnet-smsc95xx-Avoid-link-settings-race-on-interrup.patch
