--- a/series.conf
+++ b/series.conf
@@ -12329,6 +12329,7 @@
 	patches.suse/octeontx2-pf-Remove-unnecessary-synchronize_irq-befo.patch
 	patches.suse/net-phy-micrel-Allow-probing-without-.driver_data.patch
 	patches.suse/octeontx2-pf-Add-support-for-adaptive-interrupt-coal.patch
+	patches.suse/net-stmmac-remove-unused-get_addr-callback.patch
 	patches.suse/cfg80211-declare-MODULE_FIRMWARE-for-regulatory.db.patch
 	patches.suse/mac80211-upgrade-passive-scan-to-active-scan-on-DFS-.patch
 	patches.suse/wilc1000-fix-crash-observed-in-AP-mode-with-cfg80211.patch
