--- a/series.conf
+++ b/series.conf
@@ -12343,6 +12343,7 @@
 	patches.suse/iwlwifi-fw-init-SAR-GEO-table-only-if-data-is-presen.patch
 	patches.suse/iwlwifi-mvm-fix-assert-1F04-upon-reconfig.patch
 	patches.suse/can-mcp251xfd-silence-clang-s-Wunaligned-access-warn.patch
+	patches.suse/net-wwan-iosm-remove-pointless-null-check.patch
 	patches.suse/wifi-rtlwifi-remove-always-true-condition-pointed-ou.patch
 	patches.suse/Bluetooth-fix-dangling-sco_conn-and-use-after-free-i.patch
 	patches.suse/Bluetooth-hci_qca-Use-del_timer_sync-before-freeing.patch
