--- a/series.conf
+++ b/series.conf
@@ -12352,6 +12352,7 @@
 	patches.suse/net-macb-Fix-PTP-one-step-sync-support.patch
 	patches.suse/Documentation-add-description-for-net.core.gro_norma.patch
 	patches.suse/NFC-hci-fix-sleep-in-atomic-context-bugs-in-nfc_hci_.patch
+	patches.suse/net-stmmac-fix-out-of-bounds-access-in-a-selftest.patch
 	patches.suse/net-smc-postpone-sk_refcnt-increment-in-connect
 	patches.suse/drm-i915-Fix-Wstringop-overflow-warning-in-call-to-i.patch
 	patches.suse/dt-bindings-soc-qcom-smd-rpm-Fix-missing-MSM8936-com.patch
