net: dsa: mv88e6xxx: Fix refcount leak in mv88e6xxx_mdios_register (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12751,6 +12751,7 @@
 	patches.suse/netfilter-nf_tables-disallow-non-stateful-expression.patch
 	patches.suse/net-ethernet-mtk_eth_soc-out-of-bounds-read-in-mtk_h.patch
 	patches.suse/net-ethernet-ti-am65-cpsw-nuss-Fix-some-refcount-lea.patch
+	patches.suse/net-dsa-mv88e6xxx-Fix-refcount-leak-in-mv88e6xxx_mdi.patch
 	patches.suse/net-smc-fixes-for-converting-from-struct-smc_cdc_tx_pend-to-struct-smc_wr_tx_pend_priv
 	patches.suse/netfilter-nf_tables-sanitize-nft_set_desc_concat_par.patch
 	patches.suse/octeontx2-af-fix-error-code-in-is_valid_offset.patch
