net: enetc: Use pci_release_region() to release some resources (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12753,6 +12753,7 @@
 	patches.suse/net-ethernet-ti-am65-cpsw-nuss-Fix-some-refcount-lea.patch
 	patches.suse/net-dsa-mv88e6xxx-Fix-refcount-leak-in-mv88e6xxx_mdi.patch
 	patches.suse/net-smc-fixes-for-converting-from-struct-smc_cdc_tx_pend-to-struct-smc_wr_tx_pend_priv
+	patches.suse/net-enetc-Use-pci_release_region-to-release-some-res.patch
 	patches.suse/netfilter-nf_tables-sanitize-nft_set_desc_concat_par.patch
 	patches.suse/octeontx2-af-fix-error-code-in-is_valid_offset.patch
 	patches.suse/wifi-mac80211-fix-use-after-free-in-chanctx-code.patch
