--- a/series.conf
+++ b/series.conf
@@ -12757,6 +12757,7 @@
 	patches.suse/netfilter-nf_tables-sanitize-nft_set_desc_concat_par.patch
 	patches.suse/octeontx2-af-fix-error-code-in-is_valid_offset.patch
 	patches.suse/wifi-mac80211-fix-use-after-free-in-chanctx-code.patch
+	patches.suse/net-mlx5e-TC-NIC-mode-fix-tc-chains-miss-table.patch
 	patches.suse/ax25-Fix-ax25-session-cleanup-problems.patch
 	patches.suse/ARM-pxa-maybe-fix-gpio-lookup-tables.patch
 	patches.suse/soc-rockchip-Fix-refcount-leak-in-rockchip_grf_init.patch
