sfc: add basic ethtool ops to ef100 reps (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -14030,6 +14030,7 @@
 	patches.suse/sfc-update-EF100-register-descriptions.patch
 	patches.suse/sfc-detect-ef100-MAE-admin-privilege-capability-at-p.patch
 	patches.suse/sfc-add-skeleton-ef100-VF-representors.patch
+	patches.suse/sfc-add-basic-ethtool-ops-to-ef100-reps.patch
 	patches.suse/Bluetooth-btusb-Add-support-of-IMC-Networks-PID-0x35.patch
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
 	patches.suse/dt-bindings-bluetooth-broadcom-Add-BCM4349B1-DT-bind.patch
