--- a/series.conf
+++ b/series.conf
@@ -14072,6 +14072,7 @@
 	patches.suse/sfc-check-ef100-RX-packets-are-from-the-wire.patch
 	patches.suse/sfc-receive-packets-from-EF100-VFs-into-representors.patch
 	patches.suse/sfc-insert-default-MAE-rules-to-connect-VFs-to-repre.patch
+	patches.suse/sfc-move-table-locking-into-filter_table_-probe-remo.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
 	patches.suse/e1000e-remove-unnecessary-range-check-in-e1000e_phc_.patch
 	patches.suse/e1000e-convert-.adjfreq-to-.adjfine.patch
