--- a/series.conf
+++ b/series.conf
@@ -14035,6 +14035,7 @@
 	patches.suse/sfc-determine-representee-m-port-for-EF100-represent.patch
 	patches.suse/sfc-support-passing-a-representor-to-the-EF100-TX-pa.patch
 	patches.suse/sfc-hook-up-ef100-representor-TX.patch
+	patches.suse/sfc-attach-detach-EF100-representors-along-with-thei.patch
 	patches.suse/Bluetooth-btusb-Add-support-of-IMC-Networks-PID-0x35.patch
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
 	patches.suse/dt-bindings-bluetooth-broadcom-Add-BCM4349B1-DT-bind.patch
