--- a/series.conf
+++ b/series.conf
@@ -14068,6 +14068,7 @@
 	patches.suse/sfc-plumb-ef100-representor-stats.patch
 	patches.suse/sfc-ef100-representor-RX-NAPI-poll.patch
 	patches.suse/sfc-ef100-representor-RX-top-half.patch
+	patches.suse/sfc-determine-wire-m-port-at-EF100-PF-probe-time.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
 	patches.suse/e1000e-remove-unnecessary-range-check-in-e1000e_phc_.patch
 	patches.suse/e1000e-convert-.adjfreq-to-.adjfine.patch
