--- a/series.conf
+++ b/series.conf
@@ -14027,6 +14027,7 @@
 	patches.suse/can-error-specify-the-values-of-data-5.7-of-CAN-erro.patch
 	patches.suse/vmxnet3-Implement-ethtool-s-get_channels-command.patch
 	patches.suse/can-pch_can-pch_can_error-initialize-errc-before-usi.patch
+	patches.suse/sfc-update-EF100-register-descriptions.patch
 	patches.suse/Bluetooth-btusb-Add-support-of-IMC-Networks-PID-0x35.patch
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
 	patches.suse/dt-bindings-bluetooth-broadcom-Add-BCM4349B1-DT-bind.patch
