--- a/series.conf
+++ b/series.conf
@@ -14065,6 +14065,7 @@
 	patches.suse/wifi-libertas-Fix-possible-refcount-leak-in-if_usb_p.patch
 	patches.suse/wifi-rtw88-check-the-return-value-of-alloc_workqueue.patch
 	patches.suse/wifi-wil6210-debugfs-fix-uninitialized-variable-use-.patch
+	patches.suse/sfc-plumb-ef100-representor-stats.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
 	patches.suse/e1000e-remove-unnecessary-range-check-in-e1000e_phc_.patch
 	patches.suse/e1000e-convert-.adjfreq-to-.adjfine.patch
