bpf: Let bpf_warn_invalid_xdp_action() report more info (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -8758,6 +8758,7 @@
 	patches.suse/Bluetooth-hci_qca-Stop-IBS-timer-during-BT-OFF.patch
 	patches.suse/Bluetooth-vhci-Set-HCI_QUIRK_VALID_LE_STATES.patch
 	patches.suse/bpf-Do-not-WARN-in-bpf_warn_invalid_xdp_action.patch
+	patches.suse/bpf-Let-bpf_warn_invalid_xdp_action-report-more-info.patch
 	patches.suse/bpf-Introduce-composable-reg-ret-and-arg-types.patch
 	patches.suse/bpf-Replace-ARG_XXX_OR_NULL-with-ARG_XXX-PTR_MAYBE_N.patch
 	patches.suse/bpf-Replace-RET_XXX_OR_NULL-with-RET_XXX-PTR_MAYBE_N.patch
