--- a/series.conf
+++ b/series.conf
@@ -14066,6 +14066,7 @@
 	patches.suse/wifi-rtw88-check-the-return-value-of-alloc_workqueue.patch
 	patches.suse/wifi-wil6210-debugfs-fix-uninitialized-variable-use-.patch
 	patches.suse/sfc-plumb-ef100-representor-stats.patch
+	patches.suse/sfc-ef100-representor-RX-NAPI-poll.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
 	patches.suse/e1000e-remove-unnecessary-range-check-in-e1000e_phc_.patch
 	patches.suse/e1000e-convert-.adjfreq-to-.adjfine.patch
