--- a/series.conf
+++ b/series.conf
@@ -608,6 +608,7 @@
 	patches.suse/workqueue-Remove-unused-WORK_NO_COLOR.patch
 	patches.suse/net-core-Split-out-code-to-run-generic-XDP-prog.patch
 	patches.suse/bitops-Add-non-atomic-bitops-for-pointers.patch
+	patches.suse/bpf-cpumap-Implement-generic-cpumap.patch
 	patches.suse/libbpf-Fix-reuse-of-pinned-map-on-older-kernel.patch
 	patches.suse/bpf-Fix-a-typo-of-reuseport-map-in-bpf.h.patch
 	patches.suse/bpf-Fix-potential-memleak-and-UAF-in-the-verifier.patch
