--- a/series.conf
+++ b/series.conf
@@ -14015,6 +14015,7 @@
 	patches.suse/wifi-mac80211_hwsim-fix-race-condition-in-pending-pa.patch
 	patches.suse/wifi-mac80211_hwsim-add-back-erroneously-removed-cas.patch
 	patches.suse/vmxnet3-Record-queue-number-to-incoming-packets.patch
+	patches.suse/sfc-update-MCDI-protocol-headers.patch
 	patches.suse/can-pch_can-do-not-report-txerr-and-rxerr-during-bus.patch
 	patches.suse/can-rcar_can-do-not-report-txerr-and-rxerr-during-bu.patch
 	patches.suse/can-sja1000-do-not-report-txerr-and-rxerr-during-bus.patch
