--- a/series.conf
+++ b/series.conf
@@ -14074,6 +14074,7 @@
 	patches.suse/sfc-insert-default-MAE-rules-to-connect-VFs-to-repre.patch
 	patches.suse/sfc-move-table-locking-into-filter_table_-probe-remo.patch
 	patches.suse/sfc-use-a-dynamic-m-port-for-representor-RX-and-set-.patch
+	patches.suse/sfc-implement-ethtool-get-set-RX-ring-size-for-EF100.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
 	patches.suse/e1000e-remove-unnecessary-range-check-in-e1000e_phc_.patch
 	patches.suse/e1000e-convert-.adjfreq-to-.adjfine.patch
