--- a/series.conf
+++ b/series.conf
@@ -14033,6 +14033,7 @@
 	patches.suse/sfc-add-basic-ethtool-ops-to-ef100-reps.patch
 	patches.suse/sfc-phys-port-switch-identification-for-ef100-reps.patch
 	patches.suse/sfc-determine-representee-m-port-for-EF100-represent.patch
+	patches.suse/sfc-support-passing-a-representor-to-the-EF100-TX-pa.patch
 	patches.suse/Bluetooth-btusb-Add-support-of-IMC-Networks-PID-0x35.patch
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
 	patches.suse/dt-bindings-bluetooth-broadcom-Add-BCM4349B1-DT-bind.patch
