sfc: falcon: Use the bitmap API to allocate bitmaps (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -14000,6 +14000,7 @@
 	patches.suse/qlogic-qed-fix-repeated-words-in-comments.patch
 	patches.suse/cxgb4-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/sfc-siena-Use-the-bitmap-API-to-allocate-bitmaps.patch
+	patches.suse/sfc-falcon-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/bnxt-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/cnic-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/qed-Use-the-bitmap-API-to-allocate-bitmaps.patch
