--- a/series.conf
+++ b/series.conf
@@ -14073,6 +14073,7 @@
 	patches.suse/sfc-receive-packets-from-EF100-VFs-into-representors.patch
 	patches.suse/sfc-insert-default-MAE-rules-to-connect-VFs-to-repre.patch
 	patches.suse/sfc-move-table-locking-into-filter_table_-probe-remo.patch
+	patches.suse/sfc-use-a-dynamic-m-port-for-representor-RX-and-set-.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
 	patches.suse/e1000e-remove-unnecessary-range-check-in-e1000e_phc_.patch
 	patches.suse/e1000e-convert-.adjfreq-to-.adjfine.patch
