sfc: detect ef100 MAE admin privilege/capability at probe time (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -14028,6 +14028,7 @@
 	patches.suse/vmxnet3-Implement-ethtool-s-get_channels-command.patch
 	patches.suse/can-pch_can-pch_can_error-initialize-errc-before-usi.patch
 	patches.suse/sfc-update-EF100-register-descriptions.patch
+	patches.suse/sfc-detect-ef100-MAE-admin-privilege-capability-at-p.patch
 	patches.suse/Bluetooth-btusb-Add-support-of-IMC-Networks-PID-0x35.patch
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
 	patches.suse/dt-bindings-bluetooth-broadcom-Add-BCM4349B1-DT-bind.patch
