--- a/series.conf
+++ b/series.conf
@@ -14058,6 +14058,7 @@
 	patches.suse/wifi-p54-add-missing-parentheses-in-p54_flush.patch
 	patches.suse/wifi-wil6210-debugfs-fix-info-leak-in-wil_write_file.patch
 	patches.suse/sfc-falcon-fix-repeated-words-in-comments-63f1b471.patch
+	patches.suse/sfc-siena-fix-repeated-words-in-comments-58d8bcd4.patch
 	patches.suse/net-mlx4-Use-devl_-API-for-devlink-port-register-unr.patch
 	patches.suse/vmxnet3-do-not-reschedule-napi-for-rx-processing.patch
 	patches.suse/wifi-iwlwifi-mvm-fix-double-list_add-at-iwl_mvm_mac_.patch
