--- a/series.conf
+++ b/series.conf
@@ -13748,6 +13748,7 @@
 	patches.suse/tcp-Fix-data-races-around-sysctl_tcp_ecn.patch
 	patches.suse/wifi-mac80211_hwsim-set-virtio-device-ready-in-probe.patch
 	patches.suse/wifi-mac80211-fix-queue-selection-for-mesh-OCB-inter.patch
+	patches.suse/sfc-fix-use-after-free-when-disabling-sriov.patch
 	patches.suse/xen-netback-avoid-entering-xenvif_rx_next_skb-with-a.patch
 	patches.suse/drm-i915-gvt-IS_ERR-vs-NULL-bug-in-intel_gvt_update_.patch
 	patches.suse/drm-i915-selftests-fix-a-couple-IS_ERR-vs-NULL-tests.patch
