--- a/series.conf
+++ b/series.conf
@@ -8489,6 +8489,7 @@
 	patches.suse/media-ov8865-Disable-only-enabled-regulators-on-erro.patch
 	patches.suse/media-hantro-Fix-probe-func-error-path.patch
 	patches.suse/net-stmmac-enhance-XDP-ZC-driver-level-switching-per.patch
+	patches.suse/net-usb-ax88179_178a-add-TSO-feature.patch
 	patches.suse/libbpf-Free-up-resources-used-by-inner-map-definitio.patch
 	patches.suse/bpftool-Fix-memory-leak-in-prog_dump.patch
 	patches.suse/bpftool-Remove-inclusion-of-utilities.mak-from-Makef.patch
