net: make drivers set the TSO limit not the GSO limit (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -12670,6 +12670,7 @@
 	patches.suse/sfc-Copy-a-subset-of-mcdi_pcol.h-to-siena.patch
 	patches.suse/net-add-netif_inherit_tso_max.patch
 	patches.suse/net-don-t-allow-user-space-to-lift-the-device-limits.patch
+	patches.suse/net-make-drivers-set-the-TSO-limit-not-the-GSO-limit.patch
 	patches.suse/sfc-Move-Siena-specific-files.patch
 	patches.suse/sfc-Copy-shared-files-needed-for-Siena-part-1.patch
 	patches.suse/sfc-Copy-shared-files-needed-for-Siena-part-2.patch
