--- a/series.conf
+++ b/series.conf
@@ -13992,6 +13992,7 @@
 	patches.suse/sfc-Move-EF100-efx_nic_type-structs-to-the-end-of-th.patch
 	patches.suse/sfc-Unsplit-literal-string.patch
 	patches.suse/sfc-replace-function-name-in-string-with-__func__.patch
+	patches.suse/sfc-Separate-netdev-probe-remove-from-PCI-probe-remo.patch
 	patches.suse/intel-remove-unused-macros.patch
 	patches.suse/intel-e1000e-fix-repeated-words-in-comments.patch
 	patches.suse/ethernet-emulex-fix-repeated-words-in-comments.patch
