--- a/series.conf
+++ b/series.conf
@@ -12758,6 +12758,7 @@
 	patches.suse/octeontx2-af-fix-error-code-in-is_valid_offset.patch
 	patches.suse/wifi-mac80211-fix-use-after-free-in-chanctx-code.patch
 	patches.suse/net-mlx5e-TC-NIC-mode-fix-tc-chains-miss-table.patch
+	patches.suse/net-mlx5-CT-Fix-header-rewrite-re-use-for-tupels.patch
 	patches.suse/ax25-Fix-ax25-session-cleanup-problems.patch
 	patches.suse/ARM-pxa-maybe-fix-gpio-lookup-tables.patch
 	patches.suse/soc-rockchip-Fix-refcount-leak-in-rockchip_grf_init.patch
