- device property: move mac addr helpers to eth.c (jsc#PED-1565). - Refresh   patches.suse/device-property-Add-fwnode_irq_get_byname.patch.

--- a/series.conf
+++ b/series.conf
@@ -5371,6 +5371,7 @@
 	patches.suse/of-net-move-of_net-under-net.patch
 	patches.suse/of-net-add-a-helper-for-loading-netdev-dev_addr.patch
 	patches.suse/ethernet-use-of_get_ethdev_address.patch
+	patches.suse/device-property-move-mac-addr-helpers-to-eth.c.patch
 	patches.suse/rsi-fix-occasional-initialisation-failure-with-BT-co.patch
 	patches.suse/rsi-fix-key-enabled-check-causing-unwanted-encryptio.patch
 	patches.suse/rsi-fix-rate-mask-set-leading-to-P2P-failure.patch
