--- a/series.conf
+++ b/series.conf
@@ -8514,6 +8514,7 @@
 	patches.suse/ethtool-add-support-to-set-get-rx-buf-len-via-ethtoo.patch
 	patches.suse/ethtool-extend-ringparam-setting-getting-API-with-rx.patch
 	patches.suse/net-annotate-accesses-to-dev-gso_max_size.patch
+	patches.suse/net-annotate-accesses-to-dev-gso_max_segs.patch
 	patches.suse/msft-hv-2484-net-mana-Add-XDP-support.patch
 	patches.suse/msft-hv-2485-hv_netvsc-Use-bitmap_zalloc-when-applicable.patch
 	patches.suse/devlink-Add-enable_iwarp-generic-device-param.patch
