--- a/series.conf
+++ b/series.conf
@@ -5368,6 +5368,7 @@
 	patches.suse/ethernet-fix-up-ps3_gelic_net.c-for-ethernet-use-eth.patch
 	patches.suse/net-tg3-fix-obsolete-check-of-err.patch
 	patches.suse/qed-Fix-spelling-mistake-ctx_bsaed-ctx_based.patch
+	patches.suse/of-net-move-of_net-under-net.patch
 	patches.suse/rsi-fix-occasional-initialisation-failure-with-BT-co.patch
 	patches.suse/rsi-fix-key-enabled-check-causing-unwanted-encryptio.patch
 	patches.suse/rsi-fix-rate-mask-set-leading-to-P2P-failure.patch
