blacklist.conf: add git-fixes not needed to list

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1611,3 +1611,5 @@ ec2444530612a886b406e2830d7f314d1a07d4bb # not relevant to our configs
 519ea6f1c82fcdc9842908155ae379de47818778 # This needs f4693c2716b35d (arm64: mm: extend linear region for 52-bit VA configurations) which is way to intrusive
 7f34b43e07cb512b28543fdcb9f35d1fbfda9ebc # Fixes clang warning
 ad2c302bc6049c56c85cc2b64a0b4bd8e7ffdc56 # kernel-doc warning
+d9a434fa0c12ed5f7afe1e9dd30003ab5d059b85 # patches code not present
+5bc7b01c513a4a9b4cfe306e8d1720cfcfd3b8a3 # already present in our code base
