--- a/series.conf
+++ b/series.conf
@@ -52264,6 +52264,7 @@
 	patches.suse/cifs-added-WARN_ON-for-all-the-count-decrements.patch
 	patches.suse/SMB3-1-1-fix-mount-failure-to-some-servers-when-compression-enabled.patch
 	patches.suse/cifs-do-not-share-tcp-sessions-of-dfs-connections.patch
+	patches.suse/scsi-core-Fix-bad-pointer-dereference-when-ehandler-kthread-is-invalid.patch
 	patches.suse/scsi-zfcp-Report-port-fc_security-as-unknown-early-d.patch
 	patches.suse/firmware-arm_scmi-Fix-possible-scmi_linux_errmap-buf.patch
 	patches.suse/firmware-arm_scmi-Fix-range-check-for-the-maximum-nu.patch
