--- a/series.conf
+++ b/series.conf
@@ -56849,6 +56849,7 @@
 	patches.suse/scsi-qla2xxx-Fix-sparse-warning-for-dport_data.patch
 	patches.suse/scsi-qla2xxx-Update-manufacturer-details.patch
 	patches.suse/scsi-qla2xxx-Update-version-to-10.02.07.800-k.patch
+	patches.suse/scsi-sg-Allow-waiting-for-commands-to-complete-on-removed-device.patch
 	patches.suse/md-unlock-mddev-before-reap-sync_thread-in-action_st.patch
 	patches.suse/jbd2-fix-outstanding-credits-assert-in-jbd2_journal_.patch
 	patches.suse/ext4-recover-csum-seed-of-tmp_inode-after-migrating-.patch
