gpiolib: cdev: Set lineevent_state::irq after IRQ register successfully (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14419,6 +14419,7 @@
 	patches.suse/Revert-ALSA-usb-audio-Split-endpoint-setups-for-hw_p.patch
 	patches.suse/dmaengine-ti-k3-udma-private-Fix-refcount-leak-bug-i.patch
 	patches.suse/gpio-mockup-fix-NULL-pointer-dereference-when-removi.patch
+	patches.suse/gpiolib-cdev-Set-lineevent_state-irq-after-IRQ-regis.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
