--- a/series.conf
+++ b/series.conf
@@ -14428,6 +14428,7 @@
 	patches.suse/selftests-forwarding-add-shebang-for-sch_red.sh.patch
 	patches.suse/arm64-dts-rockchip-Pull-up-wlan-wake-on-Gru-Bob.patch
 	patches.suse/arm64-dts-rockchip-Fix-typo-in-lisense-text-for-PX30.patch
+	patches.suse/arm64-dts-rockchip-Set-RK3399-Gru-PCLK_EDP-to-24-MHz.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
