--- a/series.conf
+++ b/series.conf
@@ -14426,6 +14426,7 @@
 	patches.suse/gve-Fix-GFP-flags-when-allocing-pages-8ccac4edc8da.patch
 	patches.suse/can-gs_usb-gs_can_open-fix-race-dev-can.state-condit.patch
 	patches.suse/selftests-forwarding-add-shebang-for-sch_red.sh.patch
+	patches.suse/arm64-dts-rockchip-Pull-up-wlan-wake-on-Gru-Bob.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
