--- a/series.conf
+++ b/series.conf
@@ -14171,6 +14171,7 @@
 	patches.suse/vsock-Fix-memory-leak-in-vsock_connect.patch
 	patches.suse/vsock-Set-socket-state-back-to-SS_UNCONNECTED-in-vso.patch
 	patches.suse/devlink-Fix-use-after-free-after-a-failed-reload.patch
+	patches.suse/selftests-forwarding-Fix-failing-tests-with-old-libn.patch
 	patches.suse/net_sched-cls_route-remove-from-list-when-handle-is-.patch
 	patches.suse/drm-shmem-helper-Add-missing-vunmap-on-error.patch
 	patches.suse/drm-gem-Properly-annotate-WW-context-on-drm_gem_lock.patch
