wifi: mt76: fix reading current per-tid starting sequence number for aggregation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14422,6 +14422,7 @@
 	patches.suse/gpiolib-cdev-Set-lineevent_state-irq-after-IRQ-regis.patch
 	patches.suse/net-phy-aquantia-wait-for-the-suspend-resume-operati.patch
 	patches.suse/batman-adv-Fix-hang-up-with-small-MTU-hard-interface.patch
+	patches.suse/wifi-mt76-fix-reading-current-per-tid-starting-seque.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
