net: phy: aquantia: wait for the suspend/resume operations to finish (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14420,6 +14420,7 @@
 	patches.suse/dmaengine-ti-k3-udma-private-Fix-refcount-leak-bug-i.patch
 	patches.suse/gpio-mockup-fix-NULL-pointer-dereference-when-removi.patch
 	patches.suse/gpiolib-cdev-Set-lineevent_state-irq-after-IRQ-regis.patch
+	patches.suse/net-phy-aquantia-wait-for-the-suspend-resume-operati.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
