batman-adv: Fix hang up with small MTU hard-interface (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14421,6 +14421,7 @@
 	patches.suse/gpio-mockup-fix-NULL-pointer-dereference-when-removi.patch
 	patches.suse/gpiolib-cdev-Set-lineevent_state-irq-after-IRQ-regis.patch
 	patches.suse/net-phy-aquantia-wait-for-the-suspend-resume-operati.patch
+	patches.suse/batman-adv-Fix-hang-up-with-small-MTU-hard-interface.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
