can: gs_usb: gs_can_open(): fix race dev->can.state condition (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14424,6 +14424,7 @@
 	patches.suse/batman-adv-Fix-hang-up-with-small-MTU-hard-interface.patch
 	patches.suse/wifi-mt76-fix-reading-current-per-tid-starting-seque.patch
 	patches.suse/gve-Fix-GFP-flags-when-allocing-pages-8ccac4edc8da.patch
+	patches.suse/can-gs_usb-gs_can_open-fix-race-dev-can.state-condit.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
