arm64: dts: rockchip: Fix typo in lisense text for PX30.Core (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14427,6 +14427,7 @@
 	patches.suse/can-gs_usb-gs_can_open-fix-race-dev-can.state-condit.patch
 	patches.suse/selftests-forwarding-add-shebang-for-sch_red.sh.patch
 	patches.suse/arm64-dts-rockchip-Pull-up-wlan-wake-on-Gru-Bob.patch
+	patches.suse/arm64-dts-rockchip-Fix-typo-in-lisense-text-for-PX30.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
