--- a/series.conf
+++ b/series.conf
@@ -14425,6 +14425,7 @@
 	patches.suse/wifi-mt76-fix-reading-current-per-tid-starting-seque.patch
 	patches.suse/gve-Fix-GFP-flags-when-allocing-pages-8ccac4edc8da.patch
 	patches.suse/can-gs_usb-gs_can_open-fix-race-dev-can.state-condit.patch
+	patches.suse/selftests-forwarding-add-shebang-for-sch_red.sh.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
