gve: Fix GFP flags when allocing pages (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14423,6 +14423,7 @@
 	patches.suse/net-phy-aquantia-wait-for-the-suspend-resume-operati.patch
 	patches.suse/batman-adv-Fix-hang-up-with-small-MTU-hard-interface.patch
 	patches.suse/wifi-mt76-fix-reading-current-per-tid-starting-seque.patch
+	patches.suse/gve-Fix-GFP-flags-when-allocing-pages-8ccac4edc8da.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
