--- a/series.conf
+++ b/series.conf
@@ -14418,6 +14418,7 @@
 	patches.suse/ALSA-core-Fix-double-free-at-snd_card_new.patch
 	patches.suse/Revert-ALSA-usb-audio-Split-endpoint-setups-for-hw_p.patch
 	patches.suse/dmaengine-ti-k3-udma-private-Fix-refcount-leak-bug-i.patch
+	patches.suse/gpio-mockup-fix-NULL-pointer-dereference-when-removi.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
