kexec: clean up arch_kexec_kernel_verify_sig (bsc#1196444).

--- a/series.conf
+++ b/series.conf
@@ -13557,6 +13557,7 @@
 	patches.suse/selinux-Add-boundary-check-in-put_entry.patch
 	patches.suse/kexec_file-drop-weak-attribute-from-functions.patch
 	patches.suse/kexec-drop-weak-attribute-from-functions.patch
+	patches.suse/kexec-clean-up-arch_kexec_kernel_verify_sig.patch
 	patches.suse/crypto-ccp-Use-kzalloc-for-sev-ioctl-interfaces-to-p.patch
 	patches.suse/crypto-sun8i-ss-fix-error-codes-in-allocate_flows.patch
 	patches.suse/crypto-sun8i-ss-fix-infinite-loop-in-sun8i_ss_setup_.patch
