arm64: kexec_file: use more system keyrings to verify kernel image signature (bsc#1196444).

--- a/series.conf
+++ b/series.conf
@@ -13559,6 +13559,7 @@
 	patches.suse/kexec-drop-weak-attribute-from-functions.patch
 	patches.suse/kexec-clean-up-arch_kexec_kernel_verify_sig.patch
 	patches.suse/kexec-KEYS-make-the-code-in-bzImage64_verify_sig-gen.patch
+	patches.suse/arm64-kexec_file-use-more-system-keyrings-to-verify-.patch
 	patches.suse/crypto-ccp-Use-kzalloc-for-sev-ioctl-interfaces-to-p.patch
 	patches.suse/crypto-sun8i-ss-fix-error-codes-in-allocate_flows.patch
 	patches.suse/crypto-sun8i-ss-fix-infinite-loop-in-sun8i_ss_setup_.patch
