--- a/series.conf
+++ b/series.conf
@@ -56606,6 +56606,7 @@
 	patches.suse/kexec_file-drop-weak-attribute-from-functions.patch
 	patches.suse/kexec-drop-weak-attribute-from-functions.patch
 	patches.suse/kexec-clean-up-arch_kexec_kernel_verify_sig.patch
+	patches.suse/kexec-KEYS-make-the-code-in-bzImage64_verify_sig-gen.patch
 	patches.suse/crypto-arm64-gcm-Select-AEAD-for-GHASH_ARM64_CE.patch
 	patches.suse/crypto-arm64-poly1305-fix-a-read-out-of-bound.patch
 	patches.suse/vmxnet3-prepare-for-version-7-changes.patch
