--- a/series.conf
+++ b/series.conf
@@ -13555,6 +13555,7 @@
 	patches.suse/selftests-seccomp-Fix-compile-warning-when-CC-clang.patch
 	patches.suse/selinux-fix-memleak-in-security_read_state_kernel.patch
 	patches.suse/selinux-Add-boundary-check-in-put_entry.patch
+	patches.suse/kexec_file-drop-weak-attribute-from-functions.patch
 	patches.suse/crypto-ccp-Use-kzalloc-for-sev-ioctl-interfaces-to-p.patch
 	patches.suse/crypto-sun8i-ss-fix-error-codes-in-allocate_flows.patch
 	patches.suse/crypto-sun8i-ss-fix-infinite-loop-in-sun8i_ss_setup_.patch
