kexec, KEYS, s390: Make use of built-in and secondary keyring for signature verification (bsc#1196444).

--- a/series.conf
+++ b/series.conf
@@ -56608,6 +56608,7 @@
 	patches.suse/kexec-clean-up-arch_kexec_kernel_verify_sig.patch
 	patches.suse/kexec-KEYS-make-the-code-in-bzImage64_verify_sig-gen.patch
 	patches.suse/arm64-kexec_file-use-more-system-keyrings-to-verify-.patch
+	patches.suse/kexec-KEYS-s390-Make-use-of-built-in-and-secondary-k.patch
 	patches.suse/crypto-arm64-gcm-Select-AEAD-for-GHASH_ARM64_CE.patch
 	patches.suse/crypto-arm64-poly1305-fix-a-read-out-of-bound.patch
 	patches.suse/vmxnet3-prepare-for-version-7-changes.patch
