kexec_file: drop weak attribute from arch_kexec_apply_relocations[_add] (bsc#1196444).

--- a/series.conf
+++ b/series.conf
@@ -56141,6 +56141,7 @@
 	patches.suse/0031-dm-integrity-fix-error-code-in-dm_integrity_ctr.patch
 	patches.suse/0032-dm-crypt-make-printing-of-the-key-constant-time.patch
 	patches.suse/tty-fix-deadlock-caused-by-calling-printk-under-tty_.patch
+	patches.suse/kexec_file-drop-weak-attribute-from-arch_kexec_apply.patch
 	patches.suse/PCI-AER-Clear-MULTI_ERR_COR-UNCOR_RCV-bits.patch
 	patches.suse/PCI-PM-Power-up-all-devices-during-runtime-resume.patch
 	patches.suse/PCI-cadence-Fix-find_first_zero_bit-limit.patch
