--- a/series.conf
+++ b/series.conf
@@ -56334,6 +56334,7 @@
 	patches.suse/scsi-qla2xxx-Remove-unused-ql_dm_tgt_ex_pct-paramete.patch
 	patches.suse/clocksource-drivers-sp804-Avoid-error-on-multiple-in.patch
 	patches.suse/clocksource-drivers-oxnas-rps-Fix-irq_of_parse_and_m.patch
+	patches.suse/x86-kexec-fix-memory-leak-of-elf-header-buffer.patch
 	patches.suse/mmc-block-Fix-CQE-recovery-reset-success.patch
 	patches.suse/Input-bcm5974-set-missing-URB_NO_TRANSFER_DMA_MAP-ur.patch
 	patches.suse/drm-imx-fix-compiler-warning-with-gcc-12.patch
