--- a/series.conf
+++ b/series.conf
@@ -2197,6 +2197,46 @@
 	patches.kernel.org/5.19.10-036-RDMA-irdma-Use-s-g-array-in-post-send-only-wh.patch
 	patches.kernel.org/5.19.10-037-Input-goodix-add-compatible-string-for-GT1158.patch
 	patches.kernel.org/5.19.10-038-Linux-5.19.10.patch
+	patches.kernel.org/5.19.11-001-of-fdt-fix-off-by-one-error-in-unflatten_dt_n.patch
+	patches.kernel.org/5.19.11-002-pinctrl-qcom-sc8180x-Fix-gpio_wakeirq_map.patch
+	patches.kernel.org/5.19.11-003-pinctrl-qcom-sc8180x-Fix-wrong-pin-numbers.patch
+	patches.kernel.org/5.19.11-004-pinctrl-rockchip-Enhance-support-for-IRQ_TYPE.patch
+	patches.kernel.org/5.19.11-005-pinctrl-sunxi-Fix-name-for-A100-R_PIO.patch
+	patches.kernel.org/5.19.11-006-SUNRPC-Fix-call-completion-races-with-call_de.patch
+	patches.kernel.org/5.19.11-007-NFSv4-Turn-off-open-by-filehandle-and-NFS-re-.patch
+	patches.kernel.org/5.19.11-008-gpio-mpc8xxx-Fix-support-for-IRQ_TYPE_LEVEL_L.patch
+	patches.kernel.org/5.19.11-009-NFSv4.2-Update-mode-bits-after-ALLOCATE-and-D.patch
+	patches.kernel.org/5.19.11-010-Revert-SUNRPC-Remove-unreachable-error-condit.patch
+	patches.kernel.org/5.19.11-011-drm-panel-edp-Fix-delays-for-Innolux-N116BCA-.patch
+	patches.kernel.org/5.19.11-012-drm-meson-Correct-OSD1-global-alpha-value.patch
+	patches.kernel.org/5.19.11-013-drm-meson-Fix-OSD1-RGB-to-YCbCr-coefficient.patch
+	patches.kernel.org/5.19.11-014-drm-rockchip-vop2-Fix-eDP-HDMI-sync-polaritie.patch
+	patches.kernel.org/5.19.11-015-drm-i915-vdsc-Set-VDSC-PIC_HEIGHT-before-usin.patch
+	patches.kernel.org/5.19.11-016-drm-i915-guc-Don-t-update-engine-busyness-sta.patch
+	patches.kernel.org/5.19.11-017-drm-i915-guc-Cancel-GuC-engine-busyness-worke.patch
+	patches.kernel.org/5.19.11-018-block-blk_queue_enter-__bio_queue_enter-must-.patch
+	patches.kernel.org/5.19.11-019-parisc-ccio-dma-Add-missing-iounmap-in-error-.patch
+	patches.kernel.org/5.19.11-020-of-device-Fix-up-of_dma_configure_id-stub.patch
+	patches.kernel.org/5.19.11-021-io_uring-msg_ring-check-file-type-before-putt.patch
+	patches.kernel.org/5.19.11-022-cifs-revalidate-mapping-when-doing-direct-wri.patch
+	patches.kernel.org/5.19.11-023-cifs-don-t-send-down-the-destination-address-.patch
+	patches.kernel.org/5.19.11-024-cifs-always-initialize-struct-msghdr-smb_msg-.patch
+	patches.kernel.org/5.19.11-025-blk-lib-fix-blkdev_issue_secure_erase.patch
+	patches.kernel.org/5.19.11-026-parisc-Allow-CONFIG_64BIT-with-ARCH-parisc.patch
+	patches.kernel.org/5.19.11-027-tools-include-uapi-Fix-asm-errno.h-for-parisc.patch
+	patches.kernel.org/5.19.11-028-drm-i915-gt-Fix-perf-limit-reasons-bit-positi.patch
+	patches.kernel.org/5.19.11-029-drm-i915-Set-correct-domains-values-at-_i915_.patch
+	patches.kernel.org/5.19.11-030-drm-amdgpu-make-sure-to-init-common-IP-before.patch
+	patches.kernel.org/5.19.11-031-drm-amdgpu-Don-t-enable-LTR-if-not-supported.patch
+	patches.kernel.org/5.19.11-032-drm-amdgpu-move-nbio-ih_doorbell_range-into-i.patch
+	patches.kernel.org/5.19.11-033-drm-amdgpu-move-nbio-sdma_doorbell_range-into.patch
+	patches.kernel.org/5.19.11-034-net-Find-dst-with-sk-s-xfrm-policy-not-ctl_sk.patch
+	patches.kernel.org/5.19.11-035-dt-bindings-apple-aic-Fix-required-item-apple.patch
+	patches.kernel.org/5.19.11-036-cgroup-Add-missing-cpus_read_lock-to-cgroup_a.patch
+	patches.kernel.org/5.19.11-037-ALSA-hda-sigmatel-Keep-power-up-while-beep-is.patch
+	patches.kernel.org/5.19.11-038-ALSA-hda-sigmatel-Fix-unused-variable-warning.patch
+	patches.kernel.org/5.19.11-039-Revert-iommu-vt-d-Fix-possible-recursive-lock.patch
+	patches.kernel.org/5.19.11-040-Linux-5.19.11.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
@@ -2235,7 +2275,6 @@
 	patches.suse/tools-bpf_jit_disasm-Don-t-display-disassembler-four.patch
 	patches.suse/tools-bpftool-Fix-compilation-error-with-new-binutil.patch
 	patches.suse/tools-bpftool-Don-t-display-disassembler-four-args-f.patch
-	patches.suse/Revert-iommu-vt-d-Fix-possible-recursive-locking-in-.patch
 	########################################################
 	# end of sorted patches
 	########################################################
