ethernet: ibmveth: use ether_addr_to_u64() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5538,6 +5538,7 @@
 	patches.suse/ethernet-enic-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-ec_bhf-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-enetc-use-eth_hw_addr_set.patch
+	patches.suse/ethernet-ibmveth-use-ether_addr_to_u64.patch
 	patches.suse/ethernet-ixgb-use-eth_hw_addr_set.patch
 	patches.suse/net-stream-don-t-purge-sk_error_queue-in-sk_stream_k.patch
 	patches.suse/net-smc-save-stack-space-and-allocate-smc_init_info
