scsi: qla2xxx: Fix disk failure to rediscover (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11023,6 +11023,7 @@
 	patches.suse/scsi-libiscsi-Add-iscsi_cls_conn-to-sysfs-after-initialization.patch
 	patches.suse/scsi-libiscsi-Teardown-iscsi_cls_conn-gracefully.patch
 	patches.suse/scsi-qla2xxx-Fix-incorrect-reporting-of-task-managem.patch
+	patches.suse/scsi-qla2xxx-Fix-disk-failure-to-rediscover.patch
 	patches.suse/scsi-qla2xxx-Fix-loss-of-NVMe-namespaces-after-drive.patch
 	patches.suse/scsi-qla2xxx-Fix-missed-DMA-unmap-for-NVMe-ls-reques.patch
 	patches.suse/scsi-qla2xxx-Fix-crash-during-module-load-unload-tes.patch
