ethernet: sxgbe: use eth_hw_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5588,6 +5588,7 @@
 	patches.suse/ethernet-netxen-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-r8169-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-rocker-use-eth_hw_addr_set.patch
+	patches.suse/ethernet-sxgbe-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-sis190-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-smc91x-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-smsc-use-eth_hw_addr_set.patch
