ethernet: sparx5: use eth_hw_addr_gen() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5597,6 +5597,7 @@
 	patches.suse/ethernet-prestera-use-eth_hw_addr_gen.patch
 	patches.suse/ethernet-fec-use-eth_hw_addr_gen.patch
 	patches.suse/ethernet-mlxsw-use-eth_hw_addr_gen.patch
+	patches.suse/ethernet-sparx5-use-eth_hw_addr_gen.patch
 	patches.suse/e1000e-Remove-redundant-statement.patch
 	patches.suse/net-sched-Allow-statistics-reads-from-softirq.patch
 	patches.suse/ethernet-Remove-redundant-statement.patch
