serial: fsl_lpuart: Reset prior to registration (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14450,6 +14450,7 @@
 	patches.suse/media-flexcop-usb-fix-endpoint-type-check.patch
 	patches.suse/arm64-topology-fix-possible-overflow-in-amu_fie_setu.patch
 	patches.suse/workqueue-don-t-skip-lockdep-work-dependency-in-canc.patch
+	patches.suse/serial-fsl_lpuart-Reset-prior-to-registration.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
