ASoC: nau8824: Fix semaphore unbalance at error paths (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14390,6 +14390,7 @@
 	patches.suse/ALSA-emu10k1-Fix-out-of-bounds-access-in-snd_emu10k1.patch
 	patches.suse/ASoC-qcom-sm8250-add-missing-module-owner.patch
 	patches.suse/ASoC-mchp-spdiftx-Fix-clang-Wbitfield-constant-conve.patch
+	patches.suse/ASoC-nau8824-Fix-semaphore-unbalance-at-error-paths.patch
 	patches.suse/vfio-type1-Unpin-zero-pages.patch
 	patches.suse/drm-i915-Implement-WaEdpLinkRateDataReload.patch
 	patches.suse/nvme-tcp-fix-uaf-when-detecting-digest-errors.patch
