arm64: topology: fix possible overflow in amu_fie_setup() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14448,6 +14448,7 @@
 	patches.suse/drm-panel-simple-Fix-innolux_g121i1_l01-bus_format.patch
 	patches.suse/usb-dwc3-core-leave-default-DMA-if-the-controller-do.patch
 	patches.suse/media-flexcop-usb-fix-endpoint-type-check.patch
+	patches.suse/arm64-topology-fix-possible-overflow-in-amu_fie_setu.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
