workqueue: don't skip lockdep work dependency in cancel_work_sync() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14449,6 +14449,7 @@
 	patches.suse/usb-dwc3-core-leave-default-DMA-if-the-controller-do.patch
 	patches.suse/media-flexcop-usb-fix-endpoint-type-check.patch
 	patches.suse/arm64-topology-fix-possible-overflow-in-amu_fie_setu.patch
+	patches.suse/workqueue-don-t-skip-lockdep-work-dependency-in-canc.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
