media: flexcop-usb: fix endpoint type check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14447,6 +14447,7 @@
 	patches.suse/drm-mediatek-dsi-Move-mtk_dsi_stop-call-back-to-mtk_.patch
 	patches.suse/drm-panel-simple-Fix-innolux_g121i1_l01-bus_format.patch
 	patches.suse/usb-dwc3-core-leave-default-DMA-if-the-controller-do.patch
+	patches.suse/media-flexcop-usb-fix-endpoint-type-check.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
