drm/tegra: vic: Fix build warning when CONFIG_PM=n (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13683,6 +13683,7 @@
 	patches.suse/drm-rockchip-vop-Don-t-crash-for-invalid-duplicate_s.patch
 	patches.suse/drm-rockchip-Fix-an-error-handling-path-rockchip_dp_.patch
 	patches.suse/drm-bridge-sii8620-fix-possible-off-by-one.patch
+	patches.suse/drm-tegra-vic-Fix-build-warning-when-CONFIG_PM-n.patch
 	patches.suse/drm-mediatek-Modify-dsi-funcs-to-atomic-operations.patch
 	patches.suse/drm-mediatek-Separate-poweron-poweroff-from-enable-d.patch
 	patches.suse/drm-mediatek-Keep-dsi-as-LP00-before-dcs-cmds-transf.patch
