drm/panel: simple: Fix innolux_g121i1_l01 bus_format (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14445,6 +14445,7 @@
 	patches.suse/arm64-dts-rockchip-Remove-enable-active-low-from-rk3.patch
 	patches.suse/drm-mediatek-dsi-Add-atomic-destroy-duplicate-_state.patch
 	patches.suse/drm-mediatek-dsi-Move-mtk_dsi_stop-call-back-to-mtk_.patch
+	patches.suse/drm-panel-simple-Fix-innolux_g121i1_l01-bus_format.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
