video: fbdev: pxa3xx-gcu: Fix integer overflow in pxa3xx_gcu_write (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13129,6 +13129,7 @@
 	patches.suse/powerpc-Enable-execve-syscall-exit-tracepoint.patch
 	patches.suse/powerpc-rtas-Allow-ibm-platform-dump-RTAS-call-with-.patch
 	patches.suse/powerpc-powernv-wire-up-rng-during-setup_arch.patch
+	patches.suse/video-fbdev-pxa3xx-gcu-Fix-integer-overflow-in-pxa3x.patch
 	patches.suse/ARM-dts-imx7-Move-hsic_phy-power-domain-to-HSIC-PHY-.patch
 	patches.suse/ARM-dts-imx6qdl-correct-PU-regulator-ramp-delay.patch
 	patches.suse/ARM-Fix-refcount-leak-in-axxia_boot_secondary.patch
