i2c: mlxbf: prevent stack overflow in mlxbf_i2c_smbus_start_transaction() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14454,6 +14454,7 @@
 	patches.suse/serial-fsl_lpuart-Reset-prior-to-registration.patch
 	patches.suse/i2c-imx-If-pm_runtime_get_sync-returned-1-device-acc.patch
 	patches.suse/i2c-mlxbf-incorrect-base-address-passed-during-io-wr.patch
+	patches.suse/i2c-mlxbf-prevent-stack-overflow-in-mlxbf_i2c_smbus_.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
