i2c: mlxbf: incorrect base address passed during io write (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14453,6 +14453,7 @@
 	patches.suse/workqueue-don-t-skip-lockdep-work-dependency-in-canc.patch
 	patches.suse/serial-fsl_lpuart-Reset-prior-to-registration.patch
 	patches.suse/i2c-imx-If-pm_runtime_get_sync-returned-1-device-acc.patch
+	patches.suse/i2c-mlxbf-incorrect-base-address-passed-during-io-wr.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
