i2c: mlxbf: Fix frequency calculation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14455,6 +14455,7 @@
 	patches.suse/i2c-imx-If-pm_runtime_get_sync-returned-1-device-acc.patch
 	patches.suse/i2c-mlxbf-incorrect-base-address-passed-during-io-wr.patch
 	patches.suse/i2c-mlxbf-prevent-stack-overflow-in-mlxbf_i2c_smbus_.patch
+	patches.suse/i2c-mlxbf-Fix-frequency-calculation.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
