i2c: imx: If pm_runtime_get_sync() returned 1 device access is possible (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14452,6 +14452,7 @@
 	patches.suse/arm64-topology-fix-possible-overflow-in-amu_fie_setu.patch
 	patches.suse/workqueue-don-t-skip-lockdep-work-dependency-in-canc.patch
 	patches.suse/serial-fsl_lpuart-Reset-prior-to-registration.patch
+	patches.suse/i2c-imx-If-pm_runtime_get_sync-returned-1-device-acc.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
