sunrpc: Fix misplaced barrier in call_decode (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50769,6 +50769,7 @@
 	patches.suse/xprtrdma-Avoid-Receive-Queue-wrapping.patch
 	patches.suse/xprtrdma-Fix-cwnd-update-ordering.patch
 	patches.suse/xprtrdma-rpcrdma_mr_pop-already-does-list_del_init.patch
+	patches.suse/sunrpc-Fix-misplaced-barrier-in-call_decode.patch
 	patches.suse/nvme-multipath-reset-bdev-to-ns-head-when-failover.patch
 	patches.suse/ALSA-hda-realtek-ALC285-Thinkpad-jack-pin-quirk-is-u.patch
 	patches.suse/ALSA-usb-audio-Add-dB-range-mapping-for-Sennheiser-C.patch
