xprtrdma: Fix cwnd update ordering (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50767,6 +50767,7 @@
 	patches.suse/NFS-Don-t-discard-pNFS-layout-segments-that-are-mark.patch
 	patches.suse/NFSv4-Don-t-discard-segments-marked-for-return-in-_p.patch
 	patches.suse/xprtrdma-Avoid-Receive-Queue-wrapping.patch
+	patches.suse/xprtrdma-Fix-cwnd-update-ordering.patch
 	patches.suse/xprtrdma-rpcrdma_mr_pop-already-does-list_del_init.patch
 	patches.suse/nvme-multipath-reset-bdev-to-ns-head-when-failover.patch
 	patches.suse/ALSA-hda-realtek-ALC285-Thinkpad-jack-pin-quirk-is-u.patch
