SUNRPC: Don't call connect() more than once on a TCP socket (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55582,6 +55582,7 @@
 	patches.suse/NFS-Use-of-mapping_set_error-results-in-spurious-err.patch
 	patches.suse/NFS-Return-valid-errors-from-nfs2-3_decode_dirent.patch
 	patches.suse/SUNRPC-change-locking-for-xs_swap_enable-disable.patch
+	patches.suse/SUNRPC-Don-t-call-connect-more-than-once-on-a-TCP-so.patch
 	patches.suse/SUNRPC-avoid-race-between-mod_timer-and-del_timer_sy.patch
 	patches.suse/NFSv4.1-don-t-retry-BIND_CONN_TO_SESSION-on-session-.patch
 	patches.suse/NFSv4-pNFS-Fix-another-issue-with-a-list-iterator-po.patch
